--- a/layouts/partials/logo.html
+++ b/layouts/partials/logo.html
@@ -1,1 +1,1 @@
-<img src="https://upload.wikimedia.org/wikipedia/commons/0/09/Dassault_Rafale.svg"></img>
+<img src="https://upload.wikimedia.org/wikipedia/commons/0/09/Dassault_Rafale.svg"/>
