Icones plus petites

--- a/layouts/shortcodes/yt.html
+++ b/layouts/shortcodes/yt.html
@@ -1,5 +1,5 @@
 <a href="https://www.youtube.com/watch?v={{ .Get 0 }}" target=_blank>
-  <img src="https://img.youtube.com/vi/{{ .Get 0 }}/default.jpg" style="align:left; margin:0px; display: inline"/>
+  <img height=40 src="https://img.youtube.com/vi/{{ .Get 0 }}/default.jpg" style="align:left; margin:0px; display: inline"/>
  {{ with .Get 1 }}
    {{ . }}
  {{ end }}
