--- a/layouts/partials/logo.html
+++ b/layouts/partials/logo.html
@@ -1,1 +1,7 @@
-<img src="https://upload.wikimedia.org/wikipedia/commons/0/09/Dassault_Rafale.svg"/>
+<div style="position: relative">
+  <div style="position: absolute; color: white; right: 8px; font-size: large">
+    Les Eiders Implacables<br />
+    dcs.linkea.org
+  </div>
+  <img src="/eider.svg" />
+</div>
