nouveau nom pour le site

--- a/layouts/partials/logo.html
+++ b/layouts/partials/logo.html
@@ -1,7 +1,6 @@
 <div style="position: relative">
   <div style="position: absolute; color: white; right: 8px; font-size: large">
-    Les Eiders Implacables<br />
-    dcs.linkea.org
+    Les Eiders Implacables
   </div>
   <img src="/eider.svg" />
 </div>
