Adds training data for mission 2

--- a/layouts/partials/logo.html
+++ b/layouts/partials/logo.html
@@ -2,5 +2,5 @@
   <div style="position: absolute; color: white; right: 8px; font-size: large">
     Les Eiders Implacables
   </div>
-  <img src="/eider.svg" />
+  <img src="/eider-nobg.svg" />
 </div>
