Refonte de l'affichage des liens youtube, avec l'API youtube en Javascript

--- a/layouts/shortcodes/yt.html
+++ b/layouts/shortcodes/yt.html
@@ -1,6 +1,22 @@
 <a href="https://www.youtube.com/watch?v={{ .Get 0 }}" target=_blank>
-  <img height=40 src="https://img.youtube.com/vi/{{ .Get 0 }}/default.jpg" style="align:left; margin:0px; display: inline"/>
- {{ with .Get 1 }}
-   {{ . }}
- {{ end }}
+  <div id=video_{{ .Get 0 }} style="display: inline-block; border-style: dotted; width: 300px">MAUVAIS LIEN</div>
 </a>
+
+<script>
+$.get('https://www.googleapis.com/youtube/v3/videos', {
+  key: 'AIzaSyC5UT9H9iVrP1UHv7eEcISsqc-aqjvUBuc',
+  id: '{{ .Get 0 }}',
+  part: 'snippet, contentDetails'
+}, function(result) {
+
+$("#video_{{ .Get 0 }}").html(
+  "<center><img src=\"" + result.items[0].snippet.thumbnails.default.url + "\" style=\"align:left; margin:0px; display: block\"/>"
+  + result.items[0].contentDetails.duration.replace("PT","").replace("H","h ").replace("M","min ").replace("S","sec")
+  + "<br />"
+  + result.items[0].snippet.title
+  + "</center>"
+);
+
+}, 'jsonp');
+
+</script>
