--- a/layouts/shortcodes/ytl.html
+++ b/layouts/shortcodes/ytl.html
@@ -1,5 +1,5 @@
 <a href="https://www.youtube.com/playlist?list={{ .Get 0 }}" target=_blank>
-  <div id=playlist_{{ .Get 0 }} style="display: inline-block; border-style: dotted; width: 300px">MAUVAIS LIEN</div>
+  <div id=playlist_{{ .Get 0 }} style="display: inline-block; border-style: dotted; border-width: 1px; width: 300px">MAUVAIS LIEN</div>
 </a>
 
 <script>
