--- a/layouts/shortcodes/ressource-web.html
+++ b/layouts/shortcodes/ressource-web.html
@@ -1,5 +1,9 @@
 <a href="{{ .Get 0 }}" target=_blank>
-  <div id="ressource-web-{{ .Get 0 }}" class="ressource ressource-web"> {{ .Get 1 }} </div>
+  <div id="ressource-web-{{ .Get 0 }}" class="ressource ressource-web">
+    <div class="ressource-web-logo">{{ ":page_facing_up:" | emojify }}</div>
+    <br />
+    {{ .Get 1 }}
+  </div>
 </a>
 
 <script>
