--- a/layouts/shortcodes/ressource-video-youtube.html
+++ b/layouts/shortcodes/ressource-video-youtube.html
@@ -7,18 +7,11 @@
 </a>
 
 <script>
-$.get('https://www.googleapis.com/youtube/v3/videos', {
-  key: 'AIzaSyC5UT9H9iVrP1UHv7eEcISsqc-aqjvUBuc',
-  id: '{{ .Get 0 }}',
-  part: 'snippet, contentDetails'
-}, function(result) {
-  $("#ressource-video-youtube-{{ .Get 0 }}").html(
-    "<img src=\"" + result.items[0].snippet.thumbnails.default.url + "\"/>"
-    + "<br />"
-    + iso8601_to_html(result.items[0].contentDetails.duration)
-    + "<br />"
-    + result.items[0].snippet.title
-  );
-}, 'jsonp');
-
+  get_youtube_video("{{ .Get 0 }}", function(result) {
+    $("#ressource-video-youtube-{{ .Get 0 }}").html(
+      "<img src=\"" + result.thumbnail + "\"/>" + "<br />"
+      + iso8601_to_html(result.duration) + "<br />"
+      + result.title
+    );
+  });
 </script>
