Changement CSS pour les exemplaires

--- a/layouts/shortcodes/exemplaires.html
+++ b/layouts/shortcodes/exemplaires.html
@@ -1,14 +1,16 @@
-<p>
+<div class="exemplaires">
+{{ .Get 0 }} exemplaires
 
 {{ if gt ( .Get 0 ) 10000}}
 {{ ":star:" | emojify }}
 {{ end }}
+
 {{ if gt ( .Get 0 ) 20000}}
 {{ ":star:" | emojify }}
 {{ end }}
+
 {{ if gt ( .Get 0 ) 30000}}
 {{ ":star:" | emojify }}
 {{ end }}
 
-construit à {{ .Get 0 }} exemplaires
-</p>
+</div>
