Mise au clair de certaines caractéristiques (manoeuvrabilité, supercroisière, furtivité, décolalge vertical)

--- a/layouts/shortcodes/exemplaires.html
+++ b/layouts/shortcodes/exemplaires.html
@@ -1,4 +1,4 @@
-<div class="exemplaires">
+<div class="caracteristique">
 {{ div (.Get 0) 1000 }} {{ printf "%03d" (mod (.Get 0) 1000) }} exemplaires
 {{ if gt ( .Get 0 ) 10000}}{{ ":star:" | emojify }}{{ end }}
 {{ if gt ( .Get 0 ) 20000}}{{ ":star:" | emojify }}{{ end }}
