--- a/layouts/shortcodes/ressource-encyclopedique.html
+++ b/layouts/shortcodes/ressource-encyclopedique.html
@@ -4,7 +4,7 @@
   <div class="liens">
     <a href="{{ .Get 0 }}" target=_blank>{{ ":fr:" | emojify }} Wikipédia</a><br /> <!-- wiki fr -->
     <a href="{{ .Get 1 }}" target=_blank>{{ ":gb:" | emojify }} Wikipédia</a><br /> <!-- wiki en -->
-    <a href="{{ .Get 2 }}" target=_blank>{{ ":airplane:" | emojify }} A.L.</a>      <!-- Ailes legendaires -->
+    <a href="{{ .Get 2 }}" target=_blank>{{ ":airplane:" | emojify }} A.L.</a>      <!-- Avions legendaires -->
   </div>
 
   <div class="controles">
