--- a/layouts/shortcodes/ressource-encyclopedique.html
+++ b/layouts/shortcodes/ressource-encyclopedique.html
@@ -2,9 +2,9 @@
   <div class="conteneur">
 
   <div class="liens">
-    <a href="{{ .Get 0 }}" target=_blank>{{ ":fr:" | emojify }} Wikipédia</a><br /> <!-- wiki fr -->
-    <a href="{{ .Get 1 }}" target=_blank>{{ ":gb:" | emojify }} Wikipédia</a><br /> <!-- wiki en -->
-    <a href="{{ .Get 2 }}" target=_blank>{{ ":airplane:" | emojify }} A.L.</a>      <!-- Avions legendaires -->
+    {{ if ne ( .Get 0 ) "" }} <a href="{{ .Get 0 }}" target=_blank>{{ ":fr:" | emojify }} Wikipédia</a><br /> {{ end }} <!-- wiki fr -->
+    {{ if ne ( .Get 1 ) "" }} <a href="{{ .Get 1 }}" target=_blank>{{ ":gb:" | emojify }} Wikipédia</a><br /> {{ end }} <!-- wiki en -->
+    {{ if ne ( .Get 2 ) "" }} <a href="{{ .Get 2 }}" target=_blank>{{ ":airplane:" | emojify }} A.L.</a>      {{ end }} <!-- Avions legendaires -->
   </div>
 
   <div class="controles">
