Grosse refonte CSS

--- a/layouts/shortcodes/aeronef.html
+++ b/layouts/shortcodes/aeronef.html
@@ -6,5 +6,5 @@
 {{ if in ( .Get 4 ) "prototype" }}{{ ":book:" | emojify }}{{ end }}
 <br />
 <span class="date">{{ .Get 3 }}</span>
-<span class="type">{{ if ne ( .Get 4 ) "" }} &mdash; {{ end }}{{ .Get 4 }}</span>
+{{ if ne ( .Get 4 ) "" }}<span class="type"> &mdash; {{ .Get 4 }}</span>{{ end }}
 </div>
