--- a/layouts/shortcodes/canal-youtube.html
+++ b/layouts/shortcodes/canal-youtube.html
@@ -1,5 +1,5 @@
 <div class="canal canal-youtube canal-youtube-{{ .Get 0 }}-{{ .Get 1 }}">
-  {{ ":x:" | emojify }} Mauvais Canal
+  Canal Youtube {{ .Get 0 }}={{ .Get 1 }}
 </div>
 
 <script>
