--- a/layouts/shortcodes/ressource-playlist-youtube.html
+++ b/layouts/shortcodes/ressource-playlist-youtube.html
@@ -1,15 +1,16 @@
 <a href="https://www.youtube.com/playlist?list={{ .Get 0 }}" target=_blank>
-  <div class="ressource ressource-playlist-youtube ressource-playlist-youtube-{{ .Get 0 }}">
-    {{ ":x:" | emojify }} Mauvaise playlist
+  <div class="ressource ressource-playlist-youtube-{{ .Get 0 }}">
+    <div class="vignette">{{ ":video_camera:" | emojify }}</div>
+    <div class="titre">Playlist Youtube {{ .Get 0 }}</div>
   </div>
 </a>
 
 <script>
   get_youtube_playlist("{{ .Get 0 }}", function(result) {
     $(".ressource-playlist-youtube-{{ .Get 0 }}").html(
-      "<img src=\"" + result.thumbnail + "\"/>" + "<br />"
-      + result.nbvideos + " vidéo" + (result.nbvideos > 1 ? "s": "") + "<br />"
-      + result.title
+      "<div class=\"vignette\" style=\"background-image: url(" + result.thumbnail + ");\"></div>"
+      + "<div class=\"infos\">" + result.nbvideos + " vidéo" + (result.nbvideos > 1 ? "s": "") + "</div>"
+      + "<div class=\"titre\">" + result.title + "</div>"
     );
   });
 </script>
