--- a/layouts/shortcodes/ressource-web.html
+++ b/layouts/shortcodes/ressource-web.html
@@ -1,8 +1,7 @@
 <a href="{{ .Get 0 }}" target=_blank>
-  <div id="ressource-web-{{ .Get 0 }}" class="ressource ressource-web">
-    <div class="ressource-web-logo">{{ ":page_facing_up:" | emojify }}</div>
-    <br />
-    {{ .Get 1 }}
+  <div class="ressource ressource-web-{{ .Get 0 }}">
+    <div class="vignette">{{ ":page_facing_up:" | emojify }}</div>
+    <div class="titre">{{ .Get 1 }}</div>
   </div>
 </a>
 
