--- a/static/css/eiders.css
+++ b/static/css/eiders.css
@@ -1,3 +1,16 @@
+/* La déco */
+
+.decoration {
+  max-width: 80%;
+}
+
+@media only all and (min-width: 90em) 
+{
+  .decoration {
+    max-width: 50%;
+  }
+}
+
 /* Contenus : association canal + ressources */
 .contenu
 {
@@ -36,7 +49,7 @@
 /* le theme me fait chier, je mets un poids de ouf avec un sélecteur de ouf pour override :p */
 #body div .canal-youtube img
 {
-  margin: 0px;
+  margin: 0;
   display: inline;
   padding: 0.5em;
 
@@ -55,7 +68,7 @@
 
 #body div .canal-chucksguide img
 {
-  margin: 0px;
+  margin: 0;
   display: inline;
   width: 10em;
 }
