--- a/layouts/partials/custom-header.html
+++ b/layouts/partials/custom-header.html
@@ -1,2 +1,13 @@
 <link href="/css/eiders.css" rel="stylesheet">
 <script src="/js/eiders.js"></script>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-4B4BTRER0V"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-4B4BTRER0V');
+</script>
+
