--- a/layouts/shortcodes/ressource-web.html
+++ b/layouts/shortcodes/ressource-web.html
@@ -1,18 +1,11 @@
 <a href="{{ .Get 0 }}" target=_blank>
-  <div class="ressource ressource-web-{{ .Get 0 }} {{ .Get 2 }}">
-    <div class="vignette">
-{{ if eq ( .Get 2 ) "forum" }}
-  {{ ":smiley_cat:" | emojify }}
-{{ else if eq ( .Get 2 ) "planchette" }}
-  {{ ":clipboard:" | emojify }}
-{{ else if eq ( .Get 2 ) "tuto" }}
-  {{ ":green_book:" | emojify }}
-{{ else if eq ( .Get 2 ) "wiki" }}
-  {{ ":books:" | emojify }}
-{{ else }}
-  {{ ":page_facing_up:" | emojify }}
+  <div class="ressource ressource-web-{{ .Get 0 }}">
+{{      if eq ( .Get 2 ) "forum" }}      <div class="vignette">{{ ":busts_in_silhouette:" | emojify }} </div><div class="infos">Forum</div>
+{{ else if eq ( .Get 2 ) "planchette" }} <div class="vignette">{{ ":clipboard:" | emojify }}           </div><div class="infos">Planchettes</div>
+{{ else if eq ( .Get 2 ) "tuto" }}       <div class="vignette">{{ ":point_right:" | emojify }}         </div><div class="infos">Tutos</div>
+{{ else if eq ( .Get 2 ) "wiki" }}       <div class="vignette">{{ ":book:" | emojify }}                </div><div class="infos">Wiki</div>
+{{ else }}                               <div class="vignette">{{ ":page_facing_up:" | emojify }}      </div>
 {{ end }}
-   </div>
     <div class="titre">{{ .Get 1 }}</div>
   </div>
 </a>
