--- a/layouts/shortcodes/canal-chucksguide.html
+++ b/layouts/shortcodes/canal-chucksguide.html
@@ -1,3 +1,3 @@
 <div class="canal canal-chucksguide">
-  <img src=https://www.mudspike.com/wp-content/uploads/2022/01/Banner3.jpg /><div class="canal-chucksguide-text">Chuck's Guides</div>
+  <img src=https://chucksguides.com/img/banner.webp /><div class="canal-chucksguide-text">Chuck's Guides</div>
 </div>
