--- a/layouts/shortcodes/ressource-chucksguide.html
+++ b/layouts/shortcodes/ressource-chucksguide.html
@@ -1,6 +1,6 @@
 <a href="https://chucksguides.com/aircraft/dcs/{{ .Get 0 }}" target=_blank>
   <div class="ressource ressource-web-{{ .Get 0 }}">
-  <div class="vignette">{{ ":book:" | emojify }}</div><div class="infos">Tutos</div>
+  <div class="vignette presentation"></div>
   <div class="titre">Chuck's Guide {{ .Get 0 | upper }}</div>
   </div>
 </a>
