Ajout de quoi mettre un logo à un canal-web

--- a/layouts/shortcodes/canal-web.html
+++ b/layouts/shortcodes/canal-web.html
@@ -1,1 +1,4 @@
-<div class="canal canal-web">{{ .Get 0 }}</div>
+<div class="canal canal-youtube">
+  {{ if ne ( .Get 1 ) "" }}<img src="{{ .Get 1 }}"/>{{ end }}
+  {{ .Get 0 }}
+</div>
